--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,3 @@
-<% if user_signed_in? %>
-  <p>Esti logat sefu</p>
-  <%= link_to "Log Out", destroy_user_session_path, data: { "turbo-method": :delete }, class: "btn btn-danger p-2" %>
-
-  <%= form_with model: Tweet.new, class: "p-2", url: tweets_path, local: true do |f| %>
-    <%= f.text_field :body %>
-    <%= f.submit %>
-  <% end %>
-
-  <ul>
-    <% Tweet.find_each do |tweet| %>
-    <li><%= tweet.body %></li>
-    <% end %>
-  </ul>
-<% else %>
-  <p>Nu esti logat</p>
-  <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-  <%= link_to "Log In", new_user_session_path, class: "btn btn-outline-primary btn-lg" %>
-<% end %>
+<h1>Hellor world</h1>
+<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+<%= link_to "Log In", new_user_session_path, class: "btn btn-outline-primary btn-lg" %>
